--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,21 +14,8 @@
   border-radius: 10px;
   text-align: center;
 }
-.forms {
-  background-color: #ffe2d2;
-  display: grid;
-  grid-template-columns: 1fr 2fr 100px;
-  grid-template-rows: 90px;
-  grid-gap: 10px;
-  padding: 10px;
-  border-radius: 10px;
-}
-.content {
-  /* text-align: center; */
-  margin-top: auto;
-  margin-bottom: auto;
-  padding: 10px;
-}
+
+/* form css */
 
 /* card css */
 .cardlist {
@@ -37,42 +24,6 @@
   overflow-x: auto;
   scroll-snap-type: x mandatory;
 }
-.cardlist .card {
-  scroll-snap-align: center;
-  min-width: 200px;
-  padding: 1.5rem;
-  background-color: #17141d;
-  border-radius: 1rem;
-  height: 250px;
-  box-shadow: -0.5rem 0 2rem 0rem black;
-  transition: all 300ms;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.cardlist .card header h3 {
-  color: white;
-  font-size: 0.9rem;
-  margin-bottom: 0.7em;
-}
-.cardlist .card header h2 {
-  color: white;
-  /* font-size: 0.9rem; */
-  margin-bottom: 0.7em;
-}
-.cardlist .card main h3 {
-  color: white;
-  margin-bottom: 2.3em;
-  font-size: 1.5rem;
-}
-.cardlist .card main button {
-  /* color: white; */
-  /* margin-bottom: em; */
-  font-size: 1.4rem;
-  background-color: tomato;
-  border-radius: 1rem;
-}
-
 .cardlist::-webkit-scrollbar {
   height: 0.5rem;
   background-color: #201c29;
@@ -81,16 +32,4 @@
 .cardlist::-webkit-scrollbar-thumb {
   background-color: #17141d;
   border-radius: 10px;
-}
-
-.card:hover {
-  transform: translateY(-0.5rem);
-}
-
-.card:hover ~ .card {
-  transform: translateX(1rem);
-}
-
-.card:not(:first-child) {
-  margin-left: -10px;
 }
