--- a/src/components/List.module.css
+++ b/src/components/List.module.css
@@ -5,7 +5,7 @@
   padding: 1.5rem;
   background-color: #17141d;
   border-radius: 1rem;
-  height: 320px;
+  height: 250px;
   box-shadow: -0.5rem 0 2rem 0rem black;
   transition: all 300ms;
   display: flex;
@@ -26,6 +26,7 @@
   /* font-size: 0.9rem; */
   margin-bottom: 0.7em;
 }
+
 .card main h3 {
   /* width: 100%; */
   color: white;
@@ -55,4 +56,9 @@
 
 .card:not(:first-child) {
   margin-left: -10px;
+}
+.buttonss {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 10px;
 }
